# ndfr

./: .gitignore  Cargo.toml  Makefile  README.md  layout.yml  ndfr-media-agent.sh  ndfr-media-helper.c
src/: app.rs  backlight.rs  config.rs  dynamic.rs  input.rs  main.rs  media.rs  renderer.rs  screenshot.rs  ui.rs  virtual_keyboard.rs  volume.rs
