[package]
name = "dfr_daemon"
version = "0.1.1"
authors = ["Sunplex07"]
edition = "2025"

[[bin]]
name = "dfr_daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cairo-rs = { version = "0.20", features = ["png"] }
drm = "0.11.0"
evdev = "0.12.1"
input-linux = "0.7.1"
input-linux-sys = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tiny-skia = "0.11.4"
gio = "0.20"
usvg = "0.45.1"
resvg = "0.45.1"
dirs = "6.0.0"
chrono = "0.4.41"
serde_json = "1.0.140"
dbus = "0.9.7"
mpris = "2.0.1"
tokio = "1.46.1"
zbus = "5.8.0"
futures-util = "0.3.31"
nix = { version = "0.27", features = ["fs"] }
